<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <GVL Name="GVL_IO" Id="{2dc9d395-068a-4ece-b874-33348ddfb31a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	lrRawTemp AT %I*: INT;
	lrHotendTemp : LREAL;
	iHotendPowerLevel AT %Q*: INT;
	bEnableHotend AT %Q*: BOOL;
	bFan AT %Q*: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>