<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="FB_ExtrusionSystem" Id="{150196db-43d8-42c2-8500-108336068841}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ExtrusionSystem
VAR_INPUT
	bEnable 			: BOOL;
	bReset 				: BOOL;
	bExecute			: BOOL;
	lrMMtoExtrude  		: LREAL;
	lrFeedrate   		: LREAL;
	lrHotEndTempSP		: LREAL;
	lrHotEndTemp 		: LREAL;
	
END_VAR
VAR_OUTPUT
	bDone 				: BOOL;
	sStateDesc			: STRING;
	bError				: BOOL;
	bExtruderReady		: BOOL;
	iHotEndPowerLevel 	: INT;
	bFan				: BOOL;
	bEnableHotend		: BOOL;
	
END_VAR
VAR_IN_OUT
	ExtruderAxisRef			: AXIS_REF;
END_VAR

VAR
	nState					: UDINT := 0;
	nErrorState				: UDINT;
	eErrorId				: UDINT;
	
	MC_Power_Extruder		: MC_Power;
	MC_Reset_Extruder 		: MC_Reset;
	MC_ZeroPos_Extruder		: MC_SetPosition;
	MC_Stop_Extruder 		: MC_Stop;
	MC_Move_Rel_Extruder 	: MC_MoveRelative;
	fbHotendTempController 	: FB_TempControl;
	//bEnableHotEnd: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ExtruderAxisRef.ReadStatus();

MC_Power_Extruder(
	Axis:= ExtruderAxisRef, 
	Enable:= bExtruderReady, 
	Enable_Positive:= bExtruderReady, 
	Enable_Negative:= bExtruderReady, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> , 
	Busy=> , 
	Active=> , 
	Error=> , 
	ErrorID=> eErrorId);
	
fbHotendTempController(
		bEnableHeater:= bEnableHotEnd, 
		lrPV:= lrHotendTemp, 
		lrSP:= lrHotEndTempSP, 
		iOutput=> iHotEndPowerLevel, 
		bError=>, 
		eErrorId=> eErrorId,
		bEnableHotend=> bEnableHotend);
		
MC_Move_Rel_Extruder(
	Axis:= ExtruderAxisRef, 
	Execute:= GVL_AxisCtrl.bExtruder_AxisMoveHMI, 
	Distance:= GVL_AxisCtrl.lrExtruder_AxisTarget , 
	Velocity:= GVL_AxisCtrl.lrExtruder_AxisVelocity, 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	Done=> GVL_AxisCtrl.bExtruder_AxisAbsMoveDone, 
	Busy=> , 
	Active=> GVL_AxisCtrl.bExtruder_AxisAbsMoveAct , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );

IF bReset THEN
	nState := 30;
END_IF

IF NOT bEnable THEN
	nState := 20;
END_IF

		
CASE nState OF
	0:	// init
		sStateDesc := 'FB INIT';
		bDone := FALSE;
		bError := FALSE;
		GVL_AxisCtrl.bExtruder_AxisAbsMove := FALSE;
		iHotEndPowerLevel := 0;
		bFan := FALSE;
		nState := 10;
		
	10:	// Init
		IF bEnable THEN 
			nState := 30;
		ELSE
			nState := 20;
		END_IF
		
	20: //Idle State
		sStateDesc := 'IDLE';
		iHotEndPowerLevel := 0;
		bEnableHotEnd := FALSE;
		bExtruderReady := FALSE;
		bFan := FALSE;
		IF bEnable THEN 
			nState := 30;
		END_IF			
		
	30:  // Reset Axis
		sStateDesc := 'RESET EXTRUDER AXIS';
		MC_Reset_Extruder(Axis:=ExtruderAxisRef, Execute:=TRUE);
		IF MC_Reset_Extruder.Done THEN
			nState := 40;
		END_IF
	
	40: // Extruder Initialised, now start heating and turn on fan
		sStateDesc := 'START HEATING';
		bEnableHotEnd := TRUE;
		bFan := TRUE;
		nState := 50;
	
	50: // Wait to reach temperature
		sStateDesc := 'WAITING TO REACH OPERATING TEMP';
		IF lrHotendTemp >= (lrHotEndTempSP*0.98) THEN
			bExtruderReady := TRUE;
			nState := 60;
		ELSE
			bExtruderReady := FALSE;
		END_IF
		
	60: // Hotened at temperature, Enable Extruder Axis
		sStateDesc := 'AT OPERATING TEMP';
		IF MC_Power_Extruder.Status THEN
			nState := 70;
		ELSE
			nState := 30;	
		END_IF
	70: // Hotened at temperature, Wait for Extrusion Command
		sStateDesc := 'WAITING FOR MOVE COMMAND';
		IF lrHotendTemp >= (lrHotEndTempSP*0.98) THEN
			bExtruderReady := TRUE;
		ELSE
			nState := 50;
		END_IF
			
	999: // Error
		sStateDesc := 'ERROR STATE';
	
	ELSE
		sStateDesc := 'INVALID STATE';
		nState := 0;
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="FB_ExtrusionSystem">
      <LineId Id="245" Count="0" />
      <LineId Id="315" Count="12" />
      <LineId Id="314" Count="0" />
      <LineId Id="328" Count="0" />
      <LineId Id="330" Count="6" />
      <LineId Id="329" Count="0" />
      <LineId Id="435" Count="0" />
      <LineId Id="437" Count="14" />
      <LineId Id="436" Count="0" />
      <LineId Id="264" Count="0" />
      <LineId Id="270" Count="0" />
      <LineId Id="265" Count="1" />
      <LineId Id="381" Count="2" />
      <LineId Id="380" Count="0" />
      <LineId Id="243" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="541" Count="68" />
      <LineId Id="379" Count="0" />
      <LineId Id="377" Count="0" />
      <LineId Id="29" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>